--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 # SPDX-License-Identifier: Apache-2.0
 
-*                   @hyperledger/ursa-maintainers
+*                   @hyperledger/ursa-maintainers @pfeairheller @m00sey @mikaelaTar
