Add ursa-wrapper-go-maintainers group
Signed-off-by: Ry Jones <ry@linux.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 # SPDX-License-Identifier: Apache-2.0
 
-*                   @hyperledger/ursa-maintainers @pfeairheller @m00sey @mikaelaTar
+*                   @hyperledger/ursa-maintainers @hyperledger/ursa-wrapper-go-maintainers
