--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,31 +2,49 @@ name: Build
 on: [ push, pull_request ]
 
 jobs:
-  test-0-3-2:
-    name: Test using Ursa 0.3.2
-    runs-on: ubuntu-20.04
-    container: m00sey/ursa_0.3.2:latest
-    strategy:
-      matrix:
-        go-version: [1.14, 1.15]
+  workflow-setup:
+    runs-on: ubuntu-latest
+    outputs:
+      CACHE_KEY_IMAGE: ${{ steps.cache.outputs.CACHE_KEY_IMAGE }}
     steps:
-    - name: Set up Go ${{ matrix.go-version }}
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-      id: go
+      - name: Git checkout
+        uses: actions/checkout@v2
+      - name: Set outputs
+        id: cache
+        run: |
+          echo "::set-output name=CACHE_KEY_IMAGE::${{ hashFiles('.github/workflows/Dockerfile') }}"
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - name: Test using Ursa ${{ matrix.ursa-version }}
-      run: |
-        make test
+  build-image:
+    needs: workflow-setup
+    runs-on: ubuntu-latest
+    env:
+      DOCKER_BUILDKIT: 1
+      CACHE_KEY_IMAGE: ${{ needs.workflow-setup.outputs.CACHE_KEY_IMAGE }}
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v2
+      - name: Try load from cache.
+        id: cache-image
+        uses: actions/cache@v2
+        with:
+          path: ${GITHUB_WORKSPACE}/cache
+          key: ${{ env.CACHE_KEY_IMAGE}}
+      - name: If NOT found in cache, build and push image.
+        if: steps.cache-image.outputs.cache-hit != 'true'
+        run: |
+          echo ${{ secrets.CR_PAT }} | docker login ghcr.io --username ${{ secrets.CR_USER }} --password-stdin
+          docker build -f .github/workflows/Dockerfile --no-cache -t ${GITHUB_REPOSITORY}/uwg-build:${{ env.CACHE_KEY_IMAGE }} .
+          docker tag ${GITHUB_REPOSITORY}/uwg-build:${{ env.CACHE_KEY_IMAGE }} ghcr.io/${GITHUB_REPOSITORY}/uwg-build:latest
+          docker push ghcr.io/${GITHUB_REPOSITORY}/uwg-build:latest
+          mkdir -p ${GITHUB_WORKSPACE}/cache
+          touch ${GITHUB_WORKSPACE}/cache/${{ env.CACHE_KEY_IMAGE }}
         
-  test-0-3-4:
-    name: Test using Ursa 0.3.4
+  test:
+    name: Test using Ursa
+    needs: build-image
     runs-on: ubuntu-20.04
-    container: m00sey/ursa_0.3.4:latest
+    container:
+      image: ghcr.io/${{ github.repository }}/uwg-build
     strategy:
       matrix:
         go-version: [1.14, 1.15]
